JazzHR-DEV/src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Locality__c</fullName>
        <label>Applicant Locality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_Date__c</fullName>
        <label>Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Can_Work_Evenings__c</fullName>
        <label>Can Work Evenings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Work_Overtime__c</fullName>
        <label>Can Work Overtime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Work_Weekends__c</fullName>
        <label>Can Work Weekends</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Status__c</fullName>
        <label>Citizenship Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Gpa__c</fullName>
        <label>College Gpa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Count__c</fullName>
        <label>Comments Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Salary_Converted__c</fullName>
        <label>Desired Salary - Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Start_Date_Converted__c</fullName>
        <label>Desired Start Date - Converted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Start_Date__c</fullName>
        <label>Desired Start Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eeo_Disability__c</fullName>
        <label>Eeo Disability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eeo_Gender__c</fullName>
        <label>Eeo Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eeo_Race__c</fullName>
        <label>Eeo Race</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eeoc_Disability_Date__c</fullName>
        <label>Eeoc Disability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eeoc_Disability_Signature__c</fullName>
        <label>Eeoc Disability Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eeoc_Disability__c</fullName>
        <label>Eeoc Disability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eeoc_Veteran__c</fullName>
        <label>Eeoc Veteran</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Felony_Explanaanswertion__c</fullName>
        <label>Felony Explanaanswertion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Felony_Explanation__c</fullName>
        <label>Felony Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Cdl__c</fullName>
        <label>Has Cdl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Driver_License__c</fullName>
        <label>Has Driver License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Felony__c</fullName>
        <label>Has Felony</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is synced from JazzHR?</description>
        <inlineHelpText>Is synced from JazzHR?</inlineHelpText>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JazzHR_Applicant_ID__c</fullName>
        <externalId>true</externalId>
        <label>JazzHR Applicant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Jazz_ID__c</fullName>
        <label>Job Jazz ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <label>Last Sync Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Linkedin_Url__c</fullName>
        <label>Linkedin Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <formula>IF(
  BEGINS( Postal_Code__c , &apos;SE11 4&apos;) ||
  BEGINS( Postal_Code__c , &apos;SE11 5&apos;) ||
  BEGINS( Postal_Code__c , &apos;SE11 6&apos;)  , &apos;Local – Lambeth&apos;,
  IF(
  BEGINS( Postal_Code__c , &apos;SW15&apos;) , &apos;Local - Wandsworth&apos;, &apos;Other&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_18__c</fullName>
        <label>Over 18</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>TRIM(LEFT (RIGHT(Location__c,  8 ), 4)) &amp; &apos; &apos; &amp; RIGHT(Location__c,  3 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiter_Id__c</fullName>
        <label>Recruiter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <label>References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Link__c</fullName>
        <label>Resume Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>JazzHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TalentPool</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willing_To_Relocate__c</fullName>
        <label>Willing To Relocate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wmyu__c</fullName>
        <label>Wmyu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>desired_salary__c</fullName>
        <label>Desired Salary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Apply_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Applicants_with_Emails</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Apply_Date__c</columns>
        <columns>JazzHR_Applicant_ID__c</columns>
        <columns>Locality__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Applicants with Emails</label>
    </listViews>
    <listViews>
        <fullName>Applicants_with_Related_Enquiry</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Apply_Date__c</columns>
        <columns>JazzHR_Applicant_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enquiry__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Applicants with Related Enquiry</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>